# NoTrackingMarkers

./: CMakeLists.txt  CMakePresets.json  NoTrackingMarkers.exe.manifest  README.md  main.cpp  ntm.h  ntm.rc  resources.h  vcpkg.json
.github/workflows/: release.yml
resources/: default_config.json
